# cli-editor

./: Cargo.toml  LICENSE  README.md  a.txt
crates/editor/: Cargo.toml
crates/editor/src/: buf.rs  cmd.rs  draw.rs  e_cursor.rs  editor.rs  key.rs  lib.rs  mode.rs  state.rs
crates/editor/src/states/: buf.rs  cursor.rs  mod.rs  mode.rs
crates/utils/: Cargo.toml
crates/utils/src/: cli.rs  lib.rs  text.rs  types.rs
src/: main.rs
