[workspace]
members = ["crates/editor", "crates/utils"]

[workspace.dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
termion = "4.0.3"

[package]
name = "ce"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
termion = { workspace = true }
editor = { path = "crates/editor" }
clap = { version = "4.5.23", features = ["derive"] }
