[workspace]
members = ["crates/editor", "crates/utils"]

[workspace.dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
crossterm = "0.28.1"

[package]
name = "ce"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { workspace = true }
anyhow = { workspace = true }
utils = { path = "crates/utils" }
editor = { path = "crates/editor" }
clap = { version = "4.5.23", features = ["derive"] }
